# bkn-trace/agent-observability/docs/swagger/swagger.json
@@ -3218,9 +3218,6 @@
                     "items": {
                         "$ref": "#/definitions/sessionvo.Conversation"
                     }
-                },
-                "next_cursor": {
-                    "type": "string"
                 }
             }
         },
@@ -3366,6 +3363,36 @@
                 },
                 "trace_id": {
                     "type": "string"
+                }
+            }
+        },
+        "httphandler.expectedOperationRequest": {
+            "type": "object",
+            "required": [
+                "operation_id",
+                "required"
+            ],
+            "properties": {
+                "operation_id": {
+                    "type": "string"
+                },
+                "required": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "httphandler.expectedReceiptRequest": {
+            "type": "object",
+            "required": [
+                "receipt_id",
+                "required"
+            ],
+            "properties": {
+                "receipt_id": {
+                    "type": "string"
+                },
+                "required": {
+                    "type": "boolean"
                 }
             }
         },
@@ -3584,13 +3611,13 @@
                 "expected_operations": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/sessionvo.ExpectedOperation"
+                        "$ref": "#/definitions/httphandler.expectedOperationRequest"
                     }
                 },
                 "expected_receipts": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/sessionvo.ExpectedReceipt"
+                        "$ref": "#/definitions/httphandler.expectedReceiptRequest"
                     }
                 },
                 "lease_epoch": {
